--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "dependencies": {
     "feed-read": "0.0.1",
-    "irc": "^0.5.2"
+    "irc": "^0.5.2",
+    "requestify": "^0.2.5"
   },
   "devDependencies": {},
   "scripts": {
